@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-17T02:01:38Z",
+  "timestamp" : "2022-09-17T08:25:12Z",
   "count_outdated" : 2421,
   "uniques_outdated" : 593,
-  "count" : 2453,
-  "uniques" : 614,
+  "count" : 2455,
+  "uniques" : 616,
   "clones" : [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ]
     }
   ]
 }
