@@ -1,6 +1,6 @@
 {
-  "count": 32,
-  "uniques": 11,
+  "count": 34,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -61,6 +61,11 @@
       "timestamp": "2022-09-16T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-17T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
