@@ -1,3 +1,11 @@
+2022-09-17T08:25:12Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3072693532
+* notice: last 14d: unq all: 12 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 593 2421 / 614 2453
+* notice: next accum: outdated-unq outdated-all / unq all: 593 2421 / 616 2455
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-17T02:01:38Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3071745766
 * notice: last 14d: unq all: 11 32
